1.11-Persisting-Data/manifests/main-application-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-application-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-application
  template:
    metadata:
      labels:
        app: main-application
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: app-volume-claim
      securityContext:
        fsGroup: 1000
      containers:
        - name: main-application-writer
          image: mickeckemi21/main-application-writer:1.10
          volumeMounts:
            - name: shared-image
              mountPath: /usr/app/files
        - name: main-application-reader
          image: mickeckemi21/main-application-reader:1.11
          volumeMounts:
            - name: shared-image
              mountPath: /usr/app/files
