1.11-Persisting-Data/manifests/ping-pong-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: app-volume-claim
      securityContext:
        fsGroup: 1000
      containers:
        - name: ping-pong-app
          image: mickeckemi21/ping-pong-app:1.11
          volumeMounts:
            - name: shared-image
              mountPath: /usr/app/files
