1.11-Persisting-Data/manifests/ping-pong-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-app-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
    - port: 8585
      protocol: TCP
      targetPort: 8080
